# agency_swarm_demo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agency_ai_demo/: demo.ipynb  demo.py
agency_ai_demo/agents/ClickUpAgent/: ClickUpAgent.py  instructions.md
agency_ai_demo/agents/ClickUpAgent/tools/: ClickUpTools.py  GetTaskTool.py
agency_ai_demo/agents/NotionProjectAgent/: NotionProjectAgent.py  __init__.py  instructions.md
agency_ai_demo/agents/NotionProjectAgent/tools/: CreateTask.py  DeleteTask.py  GetTask.py  GetTasks.py  UpdateTask.py
agency_ai_demo/agents/TechnicalProjectManager/: TechnicalProjectManager.py  __init__.py  instructions.md
agency_ai_demo/agents/TechnicalProjectManager/tools/: SendWhatsAppText.py
agency_ai_demo/shared_files/: agency_manifesto.md
agency_ai_demo/tests/: test_clickup_agent.py  test_clickup_tool_conversion.py  test_clickup_tools.py  test_list_tasks.py  test_tool_directly.py
agency_ai_demo/tools/: clickup_tools.py
agency_ai_demo/utils/: ensure_serializable.py  tool_wrapper.py
agents/ClickUpAgent/: __init__.py
agents/ResearchAndReportAgent/: ResearchAndReportAgent.py  __init__.py  instructions.md
agents/TechnicalProjectManager/: instructions.md
app/: README.md  demo.py
app/agents/Devid/: Devid.py
app/agents/NotionProjectAgent/: NotionProjectAgent.py  instructions.md
app/agents/NotionProjectAgent/tools/: CreateTask.py  GetTasks.py  (+1 more)
app/agents/ResearchAndReportAgent/: ResearchAndReportAgent.py
app/agents/TechnicalProjectManager/: TechnicalProjectManager.py  instructions.md
(+2 files in other folders)
